Unit 6: Redis integration and caching implementation