@@ -1,10 +1,47 @@
+## Unit 5 - MongoDB Repository Cleanup ##
+**Date: June 6, 2025**
+
+### ✅ Completed Tasks:
+1. **Repository Structure Reorganization**
+   - Moved UserProfileRepository to `com.template.repository.mongo` package
+   - Moved UserProfileRepositoryTest to `com.template.repository.mongo` package  
+   - Removed old duplicate files from main repository directory
+   - Clean separation between JPA repositories and MongoDB repositories
+
+2. **Configuration Updates**
+   - Updated MongoConfig to scan `com.template.repository.mongo` package
+   - Fixed all import references in UserProfileService and UserProfileServiceTest
+   - Removed Java preview features from Maven configuration (not needed for Java 21)
+
+3. **Embedded MongoDB Cleanup**
+   - Removed `--enable-preview` compiler arguments from pom.xml
+   - Confirmed no embedded MongoDB dependencies present
+   - Using standard Spring Data MongoDB for operations
+
+4. **Test Fixes**
+   - Fixed UserProfileServiceTest import statements
+   - Corrected date handling (LocalDateTime vs LocalDate)
+   - Updated method calls to match UserProfile API (setIsPublic, setUserPreferences)
+
+### 📁 Final Directory Structure:
+```
+src/main/java/com/template/repository/
+├── mongo/UserProfileRepository.java     (MongoDB)
+└── UserRepository.java                  (JPA)
+
+src/test/java/com/template/repository/
+├── mongo/UserProfileRepositoryTest.java (MongoDB tests)
+└── UserRepositoryTest.java              (JPA tests)
+```
+
+### 🔧 Technical Details:
+- Java 21 best practices maintained
+- Spring Boot 3.3.0 compatibility ensured
+- No embedded dependencies for testing (uses standard Spring test configurations)
+- All imports and package references updated correctly
+
+**Commit:** `8ea8351` - MongoDB cleanup and reorganization complete
+
+---
+
 ## Unit 6 ##
-✅ MongoDB Repository Cleanup Complete
-I have successfully completed the following tasks:
-
-1. Repository Structure Organized
-✅ UserProfileRepository is now correctly located in com.template.repository.mongo
-✅ UserProfileRepositoryTest is now correctly located in com.template.repository.mongo
-✅ Old duplicate files have been removed from the main repository directory
-
-## Unit 7 ##
